[project]
authors = [{name = "Bror Jönsson", email = "brorfred@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "pp_models"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
pp_models = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.1.2,<3"
scipy = ">=1.14.1,<2"
matplotlib = ">=3.9.2,<4"
ipython = ">=8.32.0,<9"
pandas = ">=2.2.3,<3"
xarray = ">=2024.10.0,<2025"
marimo = ">=0.9.33,<0.10"
pydap = ">=3.5.2,<4"
netcdf4 = ">=1.7.2,<2"
ruff = ">=0.8.2,<0.9"
jupyter = ">=1.1.1,<2"
notebook = ">=7.3.2,<8"
jupyterlab = ">=4.3.5,<5"

